# hlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp
common/: common.h  hcommon.h  hlibc_type.h
example/: CMakeLists.txt  example.h  list_example.c  list_example.cpp  main.c  queue_example.c  queue_example.cpp  stack_example.c  stack_example.cpp
list/: hlist.c  hlist.h  list.c  list.h
queue/: hqueue.c  hqueue.h  queue.c  queue.h
src/: CMakeLists.txt
src/list/: hlist.c  hlist.h
src/queue/: hqueue.c  hqueue.h
src/stack/: hstack.c
stack/: hstack.c  hstack.h  stack.c  stack.h
